test/negative/203_if_cond_nonbool.err
203_if_cond_nonbool.fx:2:12: error: if() condition should have 'bool' type

1 errors occured during type checking.
